test/files/neg/bug1275.check
bug1275.scala:13: error: The kind of type MyType does not conform to the expected kind of type MyType[+t] <: TestCovariance.Seq[t] in trait Seq.
    def span[a, s <: Seq[a] { type MyType <: s } ](xs: s): s = xs f
                                   ^
one error found
